--- a/randy/index.html
+++ b/randy/index.html
@@ -14,17 +14,16 @@
   </header>
 
   <main>
-    <!-- Section 1 -->
+    <!-- Section 1  about Randy Orton -->
     <div class="section">
       <img src="/randy.jpg" alt="Randy Orton" />
       <div class="text">
         <h2>Randy Orton</h2>
-        <!-- <p>Randy Orton, Also So known as “The Viper,” is one of WWE’s most ruthless and calculated superstars. His cold stare and sudden RKO can strike from anywhere, anytime like  Viper.</p> -->
           <p>Randal keith Orton is an american professional wrestler from Knoxville,Tennessee USA, Born on April 1,1980. he comes from a lenendary wrestling family- his father "Cowboy" Bob Orton and grandfather Bob Orton Sr. were also wrestlers. Known for his cold,methodical style and his famous finisher the RKO. Randy Orton is one of the WWE’s most successful and respected superstars</p>
       </div>
     </div>
 
-    <!-- Section 2 -->
+    <!-- Section 2 about Legend Killer -->
     <div class="section reverse">
       <img src="/randy_pic1.jpg" alt="Legend Killer" />
       <div class="text">
@@ -33,7 +32,7 @@
       </div>
     </div>
 
-    <!-- Section 3 -->
+    <!-- Section 3 about RKO signature move -->
     <div class="section">
       <img src="/rko.jpg" alt="RKO" />
       <div class="text">
@@ -44,7 +43,7 @@
         <p>-- It's Named after he's name which is randal keith Orton (RKO)</p>
       </div>
     </div>
-    <!-- Section 4 -->
+    <!-- Section 4 for accomplishmnet -->
     <div class="section">
       <img src="/champ_randy.jpg" alt="RKO" />
       <div class="text">
